--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -1,42 +1,93 @@
-name: Rename the project from template
-
-on: [push]
-
-permissions: write-all
+name: rename_project.yml
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   rename-project:
     if: ${{ !contains (github.repository, '/python-project-template') }}
     runs-on: ubuntu-latest
     steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - uses: actions/checkout@v4
         with:
-          # by default, it uses a depth of 1
-          # this fetches all history so that we can read each commit
           fetch-depth: 0
           ref: ${{ github.head_ref }}
-          
-      - run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}' | tr '-' '_' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      - run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/'
+          '{print $2}' | tr '-' '_' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
         shell: bash
-
-      - run: echo "REPOSITORY_URLNAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
+      - id: measurement-3
+        name: Record Measurement After Step
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Step
+          task: get-measurement
+      - run: echo "REPOSITORY_URLNAME=$(echo '${{ github.repository }}' | awk -F '/'
+          '{print $2}')" >> $GITHUB_ENV
         shell: bash
-
-      - run: echo "REPOSITORY_OWNER=$(echo '${{ github.repository }}' | awk -F '/' '{print $1}')" >> $GITHUB_ENV
+      - id: measurement-5
+        name: Record Measurement After Step
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Step
+          task: get-measurement
+      - run: echo "REPOSITORY_OWNER=$(echo '${{ github.repository }}' | awk -F '/'
+          '{print $1}')" >> $GITHUB_ENV
         shell: bash
-        
-      - name: Is this still a template
-        id: is_template
-        run: echo "::set-output name=is_template::$(ls .github/template.yml &> /dev/null && echo true || echo false)"
-
-      - name: Rename the project
-        if: steps.is_template.outputs.is_template == 'true'
-        run: |
-          echo "Renaming the project with -a(author) ${{ env.REPOSITORY_OWNER }} -n(name) ${{ env.REPOSITORY_NAME }} -u(urlname) ${{ env.REPOSITORY_URLNAME }}"
-          .github/rename_project.sh -a ${{ env.REPOSITORY_OWNER }} -n ${{ env.REPOSITORY_NAME }} -u ${{ env.REPOSITORY_URLNAME }} -d "Awesome ${{ env.REPOSITORY_NAME }} created by ${{ env.REPOSITORY_OWNER }}"
-              
+      - id: measurement-7
+        name: Record Measurement After Step
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Step
+          task: get-measurement
+      - id: is_template
+        name: Is this still a template
+        run: echo "::set-output name=is_template::$(ls .github/template.yml &> /dev/null
+          && echo true || echo false)"
+      - id: measurement-9
+        name: Record Measurement After Is this still a template
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Is this still a template
+          task: get-measurement
+      - if: steps.is_template.outputs.is_template == 'true'
+        name: Rename the project
+        run: "echo \"Renaming the project with -a(author) ${{ env.REPOSITORY_OWNER\
+          \ }} -n(name) ${{ env.REPOSITORY_NAME }} -u(urlname) ${{ env.REPOSITORY_URLNAME\
+          \ }}\"\n.github/rename_project.sh -a ${{ env.REPOSITORY_OWNER }} -n ${{\
+          \ env.REPOSITORY_NAME }} -u ${{ env.REPOSITORY_URLNAME }} -d \"Awesome ${{\
+          \ env.REPOSITORY_NAME }} created by ${{ env.REPOSITORY_OWNER }}\"\n    \n"
+      - id: measurement-11
+        name: Record Measurement After Rename the project
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Rename the project
+          task: get-measurement
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "✅ Ready to clone and code."
-          # commit_options: '--amend --no-edit'
+          commit_message: "\u2705 Ready to clone and code."
           push_options: --force
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${{ steps.final-measurement.outputs.data-total-json }}' > total_energy_consumption.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption.json
+permissions: write-all
